kafka-quickstart/target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/sankarganeshgandhi/k8s-quarkus.git
    app.quarkus.io/build-timestamp: 2021-05-10 - 09:49:48 +0000
    app.quarkus.io/commit-id: 800ab511148aa8564e59c87ba72e259eea75ded9
  labels:
    app.kubernetes.io/name: kafka-quickstart
    app.kubernetes.io/part-of: kubernetes-quickstart
    app.kubernetes.io/version: "2.1"
  name: kafka-quickstart
  namespace: kafka-client
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: kafka-quickstart
    app.kubernetes.io/part-of: kubernetes-quickstart
    app.kubernetes.io/version: "2.1"
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kafka-quickstart
  namespace: kafka-client
spec:
  rules:
  - http:
      paths:
      - path: /prices
        backend:
          serviceName: kafka-quickstart
          servicePort: 8080
      - path: /producer1
        backend:
          serviceName: kafka-quickstart
          servicePort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/vcs-url: https://github.com/sankarganeshgandhi/k8s-quarkus.git
    app.quarkus.io/build-timestamp: 2021-05-10 - 09:49:48 +0000
    app.quarkus.io/commit-id: 800ab511148aa8564e59c87ba72e259eea75ded9
  labels:
    app.kubernetes.io/version: "2.1"
    app.kubernetes.io/part-of: kubernetes-quickstart
    app.kubernetes.io/name: kafka-quickstart
  name: kafka-quickstart
  namespace: kafka-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: "2.1"
      app.kubernetes.io/part-of: kubernetes-quickstart
      app.kubernetes.io/name: kafka-quickstart
  template:
    metadata:
      annotations:
        app.quarkus.io/vcs-url: https://github.com/sankarganeshgandhi/k8s-quarkus.git
        app.quarkus.io/build-timestamp: 2021-05-10 - 09:49:48 +0000
        app.quarkus.io/commit-id: 800ab511148aa8564e59c87ba72e259eea75ded9
      labels:
        app.kubernetes.io/version: "2.1"
        app.kubernetes.io/part-of: kubernetes-quickstart
        app.kubernetes.io/name: kafka-quickstart
      namespace: kafka-client
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: docker.io/sankarganeshg/kafka-quickstart:2.1
        imagePullPolicy: Always
        name: kafka-quickstart
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
